# plexo-core

./: .clippy.toml  .dockerignore  .gitignore  .gitmodules  .selfignore  Cargo.toml  Dockerfile  README.md  constitution.md  devenv.nix  docker-compose.yml  openapi.json  sqlx-data.json
.github/workflows/: registry-caprover.yml  registry-docker.yml  registry-flavor-demo.yml
migrations/: 20221228013635_init.sql  20230917042610_activity.sql  db.hcl
models/: schema.prisma
models/migrations/20221108212254_init/: migration.sql
sql/: create_tables.sql
src/: config.rs  handlers.rs  lib.rs  main.rs  query_root.rs  statics.rs
src/auth/: auth.rs  core.rs  engine.rs  jwt.rs  mod.rs
src/commons/: authorization.rs
src/entities/: member.rs  mod.rs  prelude.rs  project.rs  task.rs
src/errors/: definitions.rs
src/graphql/: auth.rs  auth_mutation.rs  mod.rs  mutation.rs  query.rs  subscription.rs
src/graphql/mutations/: auth.rs  mod.rs  resources.rs
src/graphql/queries/: ai_functions.rs  mod.rs  resources.rs
src/graphql/resources/: mod.rs  project.rs  task.rs
src/life/: mod.rs  utils.rs
src/llm/: mod.rs  openai.rs  suggestions.rs
src/openapi/: api.rs
src/sdk/: accessor.rs  activity.rs  labels.rs  loaders.rs  member.rs  mod.rs  organization.rs  project.rs  task.rs  team.rs  utilities.rs
src/system/: core.rs  members.rs  mod.rs  prelude.rs  schema.rs  subscriptions.rs
