[package]
edition = '2021'
name = 'plexo'
version = '0.2.19'

[dependencies]
async-graphql = { version = "6.0.5", features = [
    "decimal",
    "chrono",
    "dataloader",
    "uuid",
] }
async-graphql-poem = { version = "6.0.5" }
poem = { version = "1.3.58", features = ["cookie", "static-files"] }
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.17" }
lazy_static = { version = "1.4.0" }
tokio-stream = "0.1.14"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "time",
    "json",
    "offline",
] }
tokio = { version = "1.32.0", features = ["full"] }
dotenvy = "0.15.7"
chrono = "0.4.28"
serde = "1.0.188"
serde_json = "1.0.105"
oauth2 = { version = "4.4.1", features = ["reqwest"] }
reqwest = { version = "0.11.20", features = ["json"] }
jsonwebtoken = "8.3.0"
async-trait = "0.1.73"
percent-encoding = "2.3.0"
mime = "0.3.17"
async-openai = "0.14.0"
cookie = "0.17.0"
thiserror = "1.0.48"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
argon2 = "0.5.1"


[workspace]
members = []

# [lib]
# proc-macro = true
