[package]
edition = '2021'
name = 'plexo'
version = '0.2.27'

[dependencies]
async-graphql = { version = "7.0.1", features = [
    "decimal",
    "chrono",
    "dataloader",
    "uuid",
] }
async-graphql-poem = { version = "7.0.1" }
poem = { version = "2.0.0", features = ["cookie", "static-files"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }
lazy_static = { version = "1.4.0" }
tokio-stream = "0.1.14"
sqlx = { version = "0.7.3", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "time",
    "json",
] }
tokio = { version = "1.36.0", features = ["full"] }
dotenvy = "0.15.7"
chrono = "0.4.34"
serde = "1.0.196"
serde_json = "1.0.113"
oauth2 = { version = "4.4.2", features = ["reqwest"] }
reqwest = { version = "0.11.24", features = ["json"] }
jsonwebtoken = "9.2.0"
async-trait = "0.1.77"
percent-encoding = "2.3.1"
mime = "0.3.17"
async-openai = "0.18.3"
cookie = "0.18.0"
thiserror = "1.0.57"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
argon2 = "0.5.3"
poem-openapi = { version = "4.0.0", features = [
    "swagger-ui",
    "chrono",
    "uuid",
] }


[workspace]
members = []

# [lib]
# proc-macro = true
